sfdx-source/force-app/main/default/objects/Case/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15941: It is used to populate the Account&apos;s Country value.</description>
    <formula>Account.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>