sfdx-source/force-app/main/default/objects/Case/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>LEM-965: Indicates the AO for Mx.</description>
    <formula>HYPERLINK(&apos;/&apos; + Account.OwnerId, Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName, &apos;_blank&apos;)</formula>
    <inlineHelpText>Indicates the AO for Mx</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>