sfdx-source/force-app/main/default/objects/Case/fields/Account_Ownership_Change_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership_Change_Request_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14106: It indicates the Account Ownership Change Request Reason.</description>
    <label>Change Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dropped to Unmanaged, but should be Managed</fullName>
            </value>
            <value>
                <fullName>Low Growth Opportunity</fullName>
            </value>
            <value>
                <fullName>Mx/Store Belongs to a Group/Brand I already Manage</fullName>
            </value>
            <value>
                <fullName>Mx Not in my Region</fullName>
            </value>
            <value>
                <fullName>Mx Permanently Closed</fullName>
            </value>
            <value>
                <fullName>Mx Requested not to get Contacted</fullName>
            </value>
            <value>
                <fullName>Mx Threatening to Churn if Management not Kept</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Previously in My Book (Good Relationship)</fullName>
            </value>
            <value>
                <fullName>Request Both Specialists</fullName>
            </value>
            <value>
                <fullName>Request no SAD Coverage</fullName>
            </value>
            <value>
                <fullName>Request Swap to Marketplace Generalist</fullName>
            </value>
            <value>
                <fullName>Request Swap to Platform Generalist</fullName>
            </value>
            <value>
                <fullName>Strategic Mx | Selection Mx</fullName>
            </value>
            <value>
                <fullName>Unresponsive Mx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>