sfdx-source/force-app/main/default/objects/Case/fields/Activation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activation_Notes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1212: Indicates notes related to activation request.</description>
    <inlineHelpText>Notes related to activation request</inlineHelpText>
    <label>Activation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>