sfdx-source/force-app/main/default/objects/Case/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: Indicates additional information related to request.</description>
    <inlineHelpText>Additional information related to request</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>