sfdx-source/force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>LEM-13453: It checks the manager approval status of the S&amp;O support request.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Request Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>