sfdx-source/force-app/main/default/objects/Case/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: Indicates business ID associated with the Account.</description>
    <inlineHelpText>Business ID associated with the Account</inlineHelpText>
    <label>Business ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>