sfdx-source/force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1212: Indicates category of bulk upload request.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Marketplace</fullName>
            </value>
            <value>
                <fullName>Caviar Marketplace</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Enterprise Drive</fullName>
            </value>
            <value>
                <fullName>Bulk Activation</fullName>
            </value>
            <value>
                <fullName>Bulk Deactivation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>