sfdx-source/force-app/main/default/objects/Case/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1212: Indicates link to contract that case is related to.</description>
    <inlineHelpText>Link to contract that case is related to</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Bulk Upload Request Cases</relationshipLabel>
    <relationshipName>Bulk_Upload_Request_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>