sfdx-source/force-app/main/default/objects/Case/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <inlineHelpText>Contract lookup to which rate change applies to.</inlineHelpText>
    <label>Contract_Name</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases (Contract_Name)</relationshipLabel>
    <relationshipName>SO_Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>