sfdx-source/force-app/main/default/objects/Case/fields/Google_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Sheet_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: Indicates link to google sheet that contains store information.</description>
    <inlineHelpText>Link to google sheet that contains store information</inlineHelpText>
    <label>Google Sheet URL</label>
    <type>Url</type>
</CustomField>