sfdx-source/force-app/main/default/objects/Case/fields/Impacted_Stores_Link__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Stores_Link__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Impacted Stores Link</label>
    <type>Url</type>
</CustomField>