sfdx-source/force-app/main/default/objects/Case/fields/Is_Record_Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Created_By_Current_User__c</fullName>
    <description>LEM-1770: It is used in reports to indicate whether the record is created by the current user.</description>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Record Created By Current User</label>
    <type>Checkbox</type>
</CustomField>