sfdx-source/force-app/main/default/objects/Case/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13453: It stores new user who needs to take ownership of the Case.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_New_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>