sfdx-source/force-app/main/default/objects/Case/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162 &amp; LEM-1212: It indicates the number of stores included in request.</description>
    <inlineHelpText>For a &apos;POS Integration Request&apos; this field represents the Number of Stores for which POS integration is requested; for a &apos;Bulk Upload Request&apos; this field represents the Number of Stores in the Bulk Upload request.</inlineHelpText>
    <label>Number of Stores</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>