sfdx-source/force-app/main/default/objects/Case/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1212: Opportunity record that case is related to.</description>
    <inlineHelpText>Opportunity record that case is related to</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bulk Upload Request Cases</relationshipLabel>
    <relationshipName>Bulk_Upload_Request_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>