sfdx-source/force-app/main/default/objects/Case/fields/POS_Activation_Method__c.field-meta.xml
<CustomField>
    <fullName>POS_Activation_Method__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: It indicates methods for POS activation.</description>
    <inlineHelpText>Methods for POS Activation</inlineHelpText>
    <label>POS Activation Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Request__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light up</fullName>
            </value>
            <value>
                <fullName>Test order</fullName>
            </value>
            <value>
                <fullName>Test order and call</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>