sfdx-source/force-app/main/default/objects/Case/fields/POS_Integration_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_Go_Live_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: It indicates Go-Live date for POS integrations.</description>
    <inlineHelpText>Note: The Go-Live Date for POS Integrations cannot be less than 5 days from today. Please keep in mind that the POS team activates M-F, and dates that fall on the weekend will not be activated until the following Monday</inlineHelpText>
    <label>POS Integration Go-Live Date</label>
    <type>Date</type>
</CustomField>