sfdx-source/force-app/main/default/objects/Case/fields/POS_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1497: It stores POS Location Id.</description>
    <inlineHelpText>Also known as POS Location ID</inlineHelpText>
    <label>POS Integration ID</label>
    <type>TextArea</type>
</CustomField>