sfdx-source/force-app/main/default/objects/Case/fields/Rate_Change_Supporting_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_Supporting_Document_Link__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Rate Change Supporting Document Link</label>
    <type>Url</type>
</CustomField>