sfdx-source/force-app/main/default/objects/Case/fields/Requested_Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date_of_Completion__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1212: Indicates date requested for completion of bulk upload.</description>
    <inlineHelpText>For Bulk Upload cases, Date Requested for Completion; For S&amp;O Support Cases, Date Requested for Case Resolution.</inlineHelpText>
    <label>Requested Date of Completion</label>
    <type>Date</type>
</CustomField>