sfdx-source/force-app/main/default/objects/Case/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1212: Indicated the user who requested bulk upload case.</description>
    <inlineHelpText>The user requesting the case be completed.</inlineHelpText>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>