sfdx-source/force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>LEM-360: Support Request for Access, Technical Issues and Data Updates</description>
    <inlineHelpText>Indicates the most appropriate Sub-Type of the case</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New Account</fullName>
            </value>
            <value>
                <fullName>Account Hierarchy Change</fullName>
            </value>
            <value>
                <fullName>Account Ownership Change</fullName>
            </value>
            <value>
                <fullName>Create New Brand</fullName>
            </value>
            <value>
                <fullName>Change to Business Group ID</fullName>
            </value>
            <value>
                <fullName>MINT only updates</fullName>
            </value>
            <value>
                <fullName>SFDC Only Updates</fullName>
            </value>
            <value>
                <fullName>Reparent Account</fullName>
            </value>
            <value>
                <fullName>SAD Role Change Request</fullName>
            </value>
            <value>
                <fullName>MINT &amp; SFDC Updates</fullName>
            </value>
            <value>
                <fullName>New Merchant Store List</fullName>
            </value>
            <value>
                <fullName>Updated Merchant Store List</fullName>
            </value>
            <value>
                <fullName>Tablet/Printer Request</fullName>
            </value>
            <value>
                <fullName>Marketing Kit Request</fullName>
            </value>
            <value>
                <fullName>NV Tablet/Printer Request</fullName>
            </value>
            <value>
                <fullName>Drive Intake Form for Drive Activations</fullName>
            </value>
            <value>
                <fullName>Marketplace Rate Change</fullName>
            </value>
            <value>
                <fullName>Drive Rate Change</fullName>
            </value>
            <value>
                <fullName>Marketplace &amp; Drive Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>