sfdx-source/force-app/main/default/objects/Case/fields/Supporting_Contract_Terms_Link__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Contract_Terms_Link__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Supporting Contract Terms Link</label>
    <type>Url</type>
</CustomField>