sfdx-source/force-app/main/default/objects/Case/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: Indicates the type of bulk upload request.
LEM-1212: Adding more values for Bulk Upload Request record type.
LEM-1753: Added a generic help text to cover the POS Integration and Bulk Upload request.
LEM-1497: Added more values for POS Integrations record type.</description>
    <inlineHelpText>Select &apos;POS Integration Request&apos; if the Mx is an existing activated Partner and would like to transition to POS Order Protocol; Select &apos;Bulk Upload Request&apos; if you are submitted a Bulk Upload Request.</inlineHelpText>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS Integration Request</fullName>
            </value>
            <value>
                <fullName>Pre-Sale (New partners, COO)</fullName>
            </value>
            <value>
                <fullName>Post-Sale (Existing Partner)</fullName>
            </value>
            <value>
                <fullName>Fixing incorrect Data</fullName>
            </value>
            <value>
                <fullName>POS Test Store for New Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>