sfdx-source/force-app/main/default/objects/Case/fields/Who_to_Contact_for_Issues_or_Updates__c.field-meta.xml
<CustomField>
    <fullName>Who_to_Contact_for_Issues_or_Updates__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1162: It indicates whom should user ask direct question about POS request.</description>
    <inlineHelpText>Who do we direct questions to about the POS request</inlineHelpText>
    <label>Who to Contact for Issues or Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up with requester</fullName>
            </value>
            <value>
                <fullName>Follow up with merchant</fullName>
            </value>
            <value>
                <fullName>Follow up with account owner</fullName>
            </value>
            <value>
                <fullName>Follow up with account owner and merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>