sfdx-source/force-app/main/default/objects/Case/recordTypes/Bulk_Upload_Request.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Upload_Request</fullName>
    <active>true</active>
    <businessProcess>Bulk Upload Request</businessProcess>
    <description>Bulk Upload Request for Pre-Sale (New partners, COO), Post-Sale (Existing Partner) and Fixing incorrect Data</description>
    <label>Bulk Upload Request</label>
</RecordType>