sfdx-source/force-app/main/default/objects/Case/recordTypes/POS_Integrations.recordType-meta.xml
<RecordType>
    <fullName>POS_Integrations</fullName>
    <active>true</active>
    <businessProcess>POS Integrations</businessProcess>
    <description>Mx&apos;s creating new POS integration or transitioning to POS</description>
    <label>POS Integrations</label>
</RecordType>