sfdx-source/force-app/main/default/objects/Case/recordTypes/SO_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>SO_Support_Request</fullName>
    <active>true</active>
    <businessProcess>SO Support Request</businessProcess>
    <description>Support Request for Access, Provisioning Requests, Technical Issues and Data Updates</description>
    <label>S&amp;O Support Request</label>
</RecordType>