sfdx-source/force-app/main/default/objects/Case/validationRules/Prevent_POS_Case_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_POS_Case_creation</fullName>
    <active>true</active>
    <description>Prevent POS Case creation once the transition to WorkOrder is launched.</description>
    <errorConditionFormula>AND(
   ISNEW(),
   RecordType.DeveloperName = &apos;POS_Integrations&apos;,
   TODAY() &gt;= $Setup.POS_Config__c.Transition_To_WorkOrder_Go_Live__c
)</errorConditionFormula>
    <errorMessage>The POS integration process has now been moved from Case to WorkOrder. You many no longer create a POS case. Create a POS work order instead.</errorMessage>
</ValidationRule>