sfdx-source/force-app/main/default/objects/Case/validationRules/Validate_SAD_Role_Change_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_SAD_Role_Change_Request</fullName>
    <active>true</active>
    <description>LEM-14669: It is used to validate Change Request Reason field to create a SAD Role Change Request Activity.</description>
    <errorConditionFormula>AND(
  NOT($Permission.Bypass_Case_Validation_Rules),
  TEXT(Sub_Type__c ) = $Label.Task_Type_SAD_Role,
  ISBLANK(TEXT(Account_Ownership_Change_Request_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Account_Ownership_Change_Request_Reason__c</errorDisplayField>
    <errorMessage>Please enter information in Change Request Reason field to create a SAD Role Change Request Activity.</errorMessage>
</ValidationRule>