sfdx-source/force-app/main/default/objects/Case/listViews/Open_ANZ_SO_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Open_ANZ_SO_Support_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Sub_Type__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Segment__c</columns>
    <columns>Account_Country__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Requester__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>Australia,New Zealand</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.SO_Support_Request</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Business Hierarchy Assistance</value>
    </filters>
    <label>Open ANZ S&amp;O Support Requests</label>
</ListView>