sfdx-source/force-app/main/default/objects/Case/listViews/Open_Launch_Ops_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Launch_Ops_Support_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>Sub_Type__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Requester__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.SO_Support_Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Sub_Type__c</field>
        <operation>equals</operation>
        <value>Create New Account,Reparent Account,Create New Brand,Account Hierarchy Change,Need Help Resolving Blocked Activations,Change to Business Group ID,MINT and SFDC Updates,MINT only updates</value>
    </filters>
    <label>Open Launch Ops Support Requests</label>
</ListView>